created base scss styles

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -19,6 +19,13 @@ html {
 
 body {
   font-family: "Montserrat", sans-serif;
+  background: linear-gradient(
+    to bottom right,
+    color(darkTeal),
+    color(lightTeal)
+  );
+  height: 100vh;
+  width: 100vw;
 }
 
 img {
