--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,7 +1,9 @@
 $colors: (
   black: #000,
   white: #fff,
-  gray: #b8b7b9,
+  gray: #9f9ea0,
+  darkTeal: #18a1ad,
+  lightTeal: #28b8c0,
 );
 
 @function color($color-name) {
